# chromium_demo

./: .all-contributorsrc  .gitignore  BUILD.gn  README.md  README_zh.md  demo.cc  demo_ipc.cc  demo_ipc_message_generator.h  demo_ipc_messages.h  demo_log.cc  demo_memory.cc  demo_mojo_multiple_process.cc  demo_mojo_multiple_process_binding.cc  demo_mojo_single_process.cc  demo_resource_ids  demo_resources.cc  demo_resources.grd  demo_services.cc  demo_task_executor.cc  demo_tasks.cc  demo_tracing.cc
common/: utils.h
demo_android/demo_android_skia/: AndroidManifest.xml  BUILD.gn  README.md
demo_android/demo_android_skia/cpp/: demo_android_skia_library_loader.cc  skia_canvas.cc  skia_canvas.h  skia_canvas_gl.cc  skia_canvas_gl.h  skia_canvas_software.cc  skia_canvas_software.h  trace_android.h
demo_android/demo_android_skia/res/layout/: main_activity.xml
demo_android/demo_android_skia/res/values/: strings.xml
demo_android/demo_android_skia/src/org/demo/demo_android_skia/: DemoAndroidSkiaActivity.java  DemoAndroidSkiaApplication.java
demo_android/demo_android_skia/src/org/demo/demo_jni/: SkiaCanvas.java
demo_android/demo_apk/: AndroidManifest.xml  AndroidManifest.xml.jinja2  BUILD.gn  README.md
demo_android/demo_apk/cpp/: demo_apk_library_loader.cc  demo_foo.cc  demo_foo.h
demo_android/demo_apk/res/layout/: demo_apk_activity.xml
demo_android/demo_apk/res/values/: strings.xml
demo_android/demo_apk/src/org/chromium/demo_apk/: DemoApkActivity.java
demo_android/demo_apk/src/org/chromium/demo_jni/: DemoFoo.java
demo_bind_callback/: BUILD.gn  once.cc  repeating.cc
demo_callback/: BUILD.gn  demo_callback_once.cc  demo_callback_repeating.cc
demo_cc/: BUILD.gn  README.md  TRACE.txt  demo_cc_gui.cc  demo_cc_offscreen.cc
demo_gin/: BUILD.gn  README.md  demo_gin.cc  main.cc  shell_runner_delegate.cc  shell_runner_delegate.h
demo_gin/extends/: async_demo.cc  async_demo.h  console.cc  console.h  demo.cc  demo.h
demo_gl/: BUILD.gn  README.md  demo_gl.cc
demo_ipc/: BUILD.gn  demo_ipc.cc  demo_ipc_message_generator.cc  demo_ipc_messages.h  demo_mojo_multiple_process_binding.cc
demo_linktest/: BUILD.gn  README.md  a.cc  b.cc  main.cc
demo_mojo/: BUILD.gn  README.md  demo_mojo_multiple_process.cc  demo_mojo_multiple_process_binding.cc  demo_mojo_single_process.cc  demo_services.cc
demo_mojo/mojom/: consumer_service_manifest.json  test.mojom  test2.mojom  test3.mojom  test4.mojom  test_service.mojom  test_service_manifest.json
demo_mojo_browser_render_v8/: BUILD.gn  README.md
demo_mojo_browser_render_v8/browser/: demo_impl.cc  demo_impl.h  receiver_register.cc  receiver_register.h
demo_mojo_browser_render_v8/render/: demo_v8_binding.cc  demo_v8_binding.h  render_frame_observer.cc  render_frame_observer.h  v8_bindings_register.cc  v8_bindings_register.h
demo_mojo_browser_render_v8/test/: index.html
demo_mojo_browser_render_v8/v8/: node.h  node_version.h
demo_mojo_v8/: BUILD.gn  README.md
demo_mojo_v8/browser/: demo_impl.cc  demo_impl.h
demo_mojo_v8/mojom/: demo.mojom
demo_mojo_v8/renderer/: demo_render_frame_observer.cc  demo_render_frame_observer.h  demo_v8_binding.cc  demo_v8_binding.h
demo_mojo_v8/v8/: node_object_wrap.h
demo_resources/: BUILD.gn  demo_resource_ids  demo_resources.cc  demo_resources.grd  demo_resources_zh-CN.xtb  demo_strings.grd  demo_strings_zh-CN.xtb
demo_services/: BUILD.gn  demo_services.cc
demo_shell/: BUILD.gn  README.md  demo_shell_resources.grd  resource_ids  version.h.in
demo_shell/android/: BUILD.gn  demo_shell_descriptors.h  demo_shell_library_loader.cc  demo_shell_manager.cc  demo_shell_manager.h  shell_android.cc
demo_shell/android/demo_shell_webview/: AndroidManifest.xml
demo_shell/android/demo_shell_webview/src/org/chromium/demo_shell_webview/: DemoShellWebView.java
demo_shell/android/java/res/layout/: shell_view.xml
demo_shell/android/java/res/values/: strings.xml
demo_shell/android/java/src/org/chromium/demo_content_shell/: Shell.java  ShellManager.java  ShellViewAndroidDelegate.java
demo_shell/android/shell_apk/: AndroidManifest.xml.jinja2
demo_shell/android/shell_apk/res/layout/: demo_shell_activity.xml
demo_shell/app/: demo_shell_content_main_delegate.cc  demo_shell_content_main_delegate.h  demo_shell_main.cc
demo_shell/browser/: demo_shell_browser_context.cc  demo_shell_browser_context.h  demo_shell_browser_main.cc.del  demo_shell_browser_main.h  demo_shell_browser_main_parts.cc  demo_shell_browser_main_parts.h  demo_shell_content_browser_client.cc  demo_shell_content_browser_client.h  demo_shell_download_manager_delegate.cc  demo_shell_download_manager_delegate.h  demo_shell_permission_manager.cc  demo_shell_permission_manager.h  demo_shell_platform_data_aura.cc  demo_shell_platform_data_aura.h  shell.cc  shell.h  shell_android.cc  shell_views.cc
demo_shell/common/: demo_shell_content_client.cc  demo_shell_content_client.h  demo_shell_origin_trial_policy.cc  demo_shell_origin_trial_policy.h  demo_shell_switches.cc  demo_shell_switches.h
demo_shell/renderer/: demo_shell_content_renderer_client.cc  demo_shell_content_renderer_client.h
demo_shell/utility/: demo_shell_content_utility_client.cc  demo_shell_content_utility_client.h
demo_skia/: BUILD.gn  README.md  demo_skia.cc  skia_canvas.cc  skia_canvas.h  skia_canvas_gl.cc  skia_canvas_gl.h  skia_canvas_software.cc  skia_canvas_software.h
demo_task/: BUILD.gn  demo_task_executor.cc  demo_task_thread_pool.cc
demo_tracing/: BUILD.gn  README.md  demo_tracing_console.cc  demo_tracing_perfetto.cc  demo_tracing_perfetto_content.cc
demo_views/: BUILD.gn  README.md  demo_views.cc
demo_viz/: BUILD.gn  README.md  demo_viz.cc  demo_viz_gui.cc  demo_viz_gui_gpu.cc  demo_viz_layer.cc  demo_viz_layer_offscreen.cc  demo_viz_layer_offscreen_client.cc  demo_viz_layer_offscreen_client.h  demo_viz_offscreen.cc
demo_x11/: BUILD.gn  README.md  demo_x11.cc  demo_x11_egl.cc  demo_x11_glx.cc
mojom/: BUILD.gn  consumer_service_manifest.json  test.mojom  test3.mojom  test4.mojom  test_service.mojom  test_service_manifest.json
(+28 files in other folders)
