
group("demo") {
  testonly = true

  if(is_linux) {
    deps = [
      ":demo_exe",
      "demo_log",
      "demo_tracing",
      "demo_task",
      "demo_callback",
      "demo_mojo",
      "demo_ipc",
      "demo_mojo_v8",
      "demo_memory",
      "demo_resources",
      "demo_gl",
      "demo_viz",
      "demo_cc",
      "demo_x11",
      "demo_skia",
      "demo_views",
      # "demo_android",
      "demo_shell",
      "demo_gin",
    ]
  }

    if(is_android) {
    deps = [
      ":demo_exe",
      "demo_log",
      # "demo_tracing",
      "demo_task",
      "demo_callback",
      # "demo_mojo",
      # "demo_ipc",
      # "demo_mojo_v8",
      # "demo_memory",
      # "demo_resources",
      # "demo_gl",
      # "demo_viz",
      # "demo_cc",
      # "demo_x11",
      # "demo_skia",
      # "demo_views",
      "demo_android",
      # "demo_shell",
    ]
  }

  if(is_win) {
    deps = [
      ":demo_exe",
      "demo_log",
      "demo_tracing",
      "demo_task",
      "demo_callback",
      "demo_mojo",
      "demo_ipc",
      "demo_mojo_v8",
      "demo_memory",
      # "demo_resources",
      "demo_gl",
      "demo_viz",
      "demo_cc",
      # "demo_x11", windows不支持x11
      # "demo_skia", windows不支持x11的软件渲染
      "demo_views",
      # "demo_android",
      # "demo_shell",
      # "demo_gin",
    ]
  }

  if(is_mac) {
    deps = [
      ":demo_exe",
      "demo_log",
      "demo_tracing",
      "demo_task",
      "demo_callback",
      "demo_mojo",
      "demo_ipc",
      # "demo_mojo_v8",
      "demo_memory",
      "demo_resources",
      # "demo_gl",
      # "demo_viz",
      # "demo_cc",
      # "demo_x11",
      # "demo_skia",
      # "demo_views",
      # "demo_android",
      # "demo_shell",
    ]
  }
}

executable("demo_exe") {
  sources = [
    "demo.cc",
  ]

  deps = [
    "//base",
  ]
}
