
is_desktop = is_linux || is_mac || is_win

group("demo") {
  testonly = true

  deps = [
    ":demo_exe",
    "demo_callback",
    "demo_cc",
    "demo_log",
    "demo_task",
    "demo_views",
  ]

  if(is_desktop) {
    deps += [
      "demo_tracing",
      "demo_ipc",
      "demo_memory",
      "demo_mojo",
    ]
  }

  if (is_linux) {
    deps += [
      "demo_gin",
      "demo_gl",
      "demo_mojo_v8",
      "demo_resources",
      "demo_shell",
      "demo_skia",
      "demo_viz",
      "demo_x11",
      "demo_linktest",
    ]
  }

  if (is_android) {
    deps += [
      "demo_android",
      "demo_shell",
    ]
  }

  if (is_win) {
    deps += [
      # "demo_resources",
      "demo_gl",
      "demo_mojo_v8",

      # "demo_x11", windows不支持x11
      # "demo_skia", windows不支持x11的软件渲染
      "demo_viz",
    ]
  }

  if (is_mac) {
    deps += [
      "demo_resources",
      "demo_linktest",
    ]
    # Mac下 demo_cc 和 demo_views 暂时不支持
    deps -= [
      "demo_cc",
      "demo_views",
    ]
  }
}

executable("demo_exe") {
  sources = [ "demo.cc" ]

  deps = [ "//base" ]
}
