group("demo_callback"){
    deps = [
        ":demo_callback_once",
        ":demo_callback_repeating",
    ]
}

executable("demo_callback_once"){
    sources =[
        "once.cc"
    ]
    deps = [
        "//base"
    ]
}

executable("demo_callback_repeating"){
    sources =[
        "repeating.cc"
    ]
    deps = [
        "//base"
    ]
}