group("demo_callback"){
    deps = [
        ":demo_callback_once",
        ":demo_callback_repeating",
    ]
}

executable("demo_callback_once"){
    sources =[
        "demo_callback_once.cc"
    ]
    deps = [
        "//base"
    ]
}

executable("demo_callback_repeating"){
    sources =[
        "demo_callback_repeating.cc"
    ]
    deps = [
        "//base"
    ]
}