
import("//build/config/ui.gni")

template("cc") {
  executable(target_name){
    testonly = true
    forward_variables_from(invoker, "*")

    deps = [
      "//base",
      "//build/win:default_exe_manifest",
      "//cc:test_support",
      "//cc",
      "//components/viz/demo:host",
      "//components/viz/demo:service",
      "//components/viz/host",
      "//components/viz/service",
      "//components/viz/service/main",
      "//mojo/core/embedder",
      "//skia",
      "//ui/events",
      "//ui/events/platform",
      "//ui/platform_window",
    ]

    if (ozone_platform_x11) {
      deps += [
        "//ui/events/platform/x11",
        "//ui/ozone",
      ]
      #configs += [ "//build/config/linux:x11" ]
    }
    if (is_win) {
      deps += [
        "//ui/platform_window/win:win",
      ]
    }
  }
}

group("demo_cc") {
  testonly = true
  deps = [
    ":demo_cc_gui",
    ":demo_cc_offscreen"
  ]
}

cc("demo_cc_gui") {
  sources = [
      "demo_cc_gui.cc"
  ]
}

cc("demo_cc_offscreen") {
  sources = [
      "demo_cc_offscreen.cc"
  ]
}

