# 可执行文件
executable("demo_gin"){
    testonly = true

    sources = [
        # 主入口
        "demo_gin.cc",

        # ShellRunnerDelegate
        "shell_runner_delegate.cc",
        "shell_runner_delegate.h",

        # 我们扩展的方法
        "extends/console.cc",
        "extends/console.h",
        "extends/demo.cc",
        "extends/demo.h",

        "extends/async_demo.cc",
        "extends/async_demo.h"


    ]
    include_dirs = [
      "//demo",
    ]
    deps = [
        "//base",
        "//gin",
        "//v8"
    ]
    # 如果希望Demo运行，必须要配置初始化数据
    configs += [ "//v8:external_startup_data" ]
}
