
import("//build/config/ui.gni")

executable("demo_gl") {
  testonly = true
  
  sources = [
    "demo_gl.cc",
  ]

  deps = [
    "//base",
    "//base:i18n",
    "//gpu",
    "//gpu:gles2",
    "//gpu:raster",
    # "//gpu/command_buffer/client",
    # "//gpu/command_buffer/client:gles2_cmd_helper",
    # "//gpu/command_buffer/service",
    # "//gpu/command_buffer/service:gles2",
    "//ui/base",
    "//ui/gl",
    "//ui/gl/init",
    "//ui/events",
    "//ui/events/platform",
    "//ui/platform_window",
    # "//skia",
  ]

  if (ozone_platform_x11) {
    deps += [
      "//ui/events/platform/x11",
      "//ui/ozone",
    ]
    #configs += [ "//build/config/linux:x11" ]
  }

  if (use_ozone) {
    deps += [
      "//ui/ozone",
    ]
  }

  if (is_win) {
    deps += [
      "//ui/platform_window/win:win",
    ]
  }

  # libs = ["EGL","GLESv2"]
}
