import("//mojo/public/tools/bindings/mojom.gni")

# 应用于渲染进程
source_set("render"){
    # 工具类只有头文件，声明在这里
    public = [
        "v8/node_object_wrap.h",
        "v8/node_version.h",
        "v8/node.h",
    ]
    # 我们实现的全部源码
    sources =[
        # Render部分
        "render/demo_v8_binding.cc",
        "render/demo_v8_binding.h",
        "render/v8_bindings_register.cc",
        "render/v8_bindings_register.h",
        "render/render_frame_observer.cc",
        "render/render_frame_observer.h",
    ]
    # 依赖
    public_deps =[
        ":mojom",
    ]
    deps = [
        "//base",
        "//mojo/public:sdk",
        "//mojo/public/mojom/base",
        "//skia",
        "//v8",
    ]
}

# 应用于浏览器进程
source_set("browser"){
    # 我们实现的全部源码
    sources =[
        # Browser部分
        "browser/demo_impl.h",
        "browser/demo_impl.cc",
        "browser/receiver_register.h",
        "browser/receiver_register.cc",
    ]
    # 依赖
    public_deps =[
        ":mojom",
    ]
    deps = [
        "//base",
        "//mojo/public:sdk",
        "//mojo/public/mojom/base",
        "//v8",
    ]
}
# mojom
mojom("mojom") {
  sources = [ 
      "mojom/demo.mojom",
  ]
}