import("//mojo/public/tools/bindings/mojom.gni")

# 应用于渲染进程
source_set("renderer"){
    # 工具类只有头文件，声明在这里
    public = [
        "v8/node_object_wrap.h",
        "v8/node_version.h",
        "v8/node.h",
    ]
    # 我们实现的全部源码
    sources =[
        # Render部分
        "renderer/demo_render_frame_observer.cc",
        "renderer/demo_render_frame_observer.h",
        "renderer/demo_v8_binding.cc",
        "renderer/demo_v8_binding.h",
    ]
    # 依赖
    public_deps =[
        ":mojom",
    ]
    deps = [
        "//base",
        "//mojo/public:sdk",
        "//mojo/public/mojom/base",
        "//skia",
        "//v8",
    ]
}

# 应用于浏览器进程
source_set("browser"){
    # 我们实现的全部源码
    sources =[
        # Browser部分
        "browser/demo_impl.h",
        "browser/demo_impl.cc",
    ]
    # 依赖
    public_deps =[
        ":mojom",
    ]
    deps = [
        "//base",
        "//mojo/public:sdk",
        "//mojo/public/mojom/base",
    ]
}
# mojom
mojom("mojom") {
  sources = [ 
      "mojom/demo.mojom",
  ]
}