
import("//build/config/ui.gni")

executable("demo_skia") {
  testonly = true
  
  sources = [
    "demo_skia.cc",
    "skia_canvas.cc",
    "skia_canvas.h",
    "skia_canvas_gl.cc",
    "skia_canvas_gl.h",
    "skia_canvas_software.cc",
    "skia_canvas_software.h",
  ]

  deps = [
    "//base",
    "//base:i18n",
    "//gpu",
    "//gpu:gles2",
    "//gpu:raster",
    "//gpu/command_buffer/client",
    "//gpu/command_buffer/client:gles2_cmd_helper",
    "//gpu/command_buffer/service",
    "//gpu/command_buffer/service:gles2",
    "//ui/base",
    "//ui/gl",
    "//ui/gl/init",
    "//ui/events",
    "//ui/events/platform",
    "//ui/platform_window",
    # 直接依赖它会导致和chromium中的变量定义冲突
    #"//third_party/skia",
    "//skia",
  ]

  if (use_x11) {
    deps += [
      "//ui/events/platform/x11",
      "//ui/platform_window/x11",
    ]
    configs += [ "//build/config/linux:x11" ]
  }

  libs = ["EGL","GLESv2"]
}
