
import("//build/config/ui.gni")

group("demo_tracing") {
  testonly = true

  deps = [
    ":demo_tracing_console",
    ":demo_tracing_perfetto",
    ":demo_tracing_perfetto_content",
  ]
}

executable("demo_tracing_console") {
  sources = [
    "demo_tracing_console.cc",
  ]

  deps = [
    "//base",
    "//components/tracing:startup_tracing",
  ]
}

executable("demo_tracing_perfetto_content") {
  testonly = true
  
  sources = [
    "demo_tracing_perfetto_content.cc"
  ]

  deps = [
    "//base",
    "//components/tracing:startup_tracing",
    "//services/tracing:lib",
    "//services/tracing/public/cpp",
    "//content/test:test_support",
  ]
}

executable("demo_tracing_perfetto") {
  testonly = true
  
  sources = [
    "demo_tracing_perfetto.cc"
  ]

  deps = [
    "//base",
    "//components/tracing:startup_tracing",
    "//services/tracing:lib",
    "//services/tracing/public/cpp",
    "//mojo/public",
    "//mojo/core/embedder",
    "//services/tracing/public/cpp:traced_process",
  ]
}
