
import("//build/config/ui.gni")

template("viz") {
  executable(target_name){
    testonly = true
    forward_variables_from(invoker, "*")

    deps = [
      "//base",
      "//base:i18n",
      "//build/win:default_exe_manifest",
      "//components/viz/host",
      "//components/viz/client",
      "//components/viz/service",
      "//components/viz/service/main",
      "//mojo/core/embedder",
      "//skia",
      "//ui/events",
      "//ui/events/platform",
      "//ui/platform_window",
      "//gpu",
      "//gpu/ipc/host",
      "//components/discardable_memory/service",
      "//components/discardable_memory/client",
      "//services/viz/public/cpp/gpu",
    ]

    if (use_x11) {
      deps += [
        "//ui/events/platform/x11",
        "//ui/platform_window/x11",
      ]
      #configs += [ "//build/config/linux:x11" ]
    }

    if (is_win) {
      deps += [
        "//ui/platform_window/win:win",
      ]
    }

  }
}

group("demo_viz") {
  testonly = true
  deps = [
    ":demo_viz_gui",
    ":demo_viz_offscreen",
  ]
  if (!is_win) {
    # windows暂时编译不过
    deps += [
      ":demo_viz_layer_offscreen",
      ":demo_viz_layer",
      ":demo_viz_gui_gpu",
    ]
  }
}

viz("demo_viz_gui") {
  sources = [
      "demo_viz_gui.cc"
  ]
}

viz("demo_viz_gui_gpu") {
  sources = [
      "demo_viz_gui_gpu.cc"
  ]
}

viz("demo_viz_offscreen") {
  sources = [
      "demo_viz_offscreen.cc"
  ]
}

viz("demo_viz_layer") {
  sources = [
      "demo_viz_layer.cc"
  ]
}

viz("demo_viz_layer_offscreen") {
  sources = [
      "demo_viz_layer_offscreen.cc",
      "demo_viz_layer_offscreen_client.cc"
  ]
}
